# fsberlin

./: .gitignore  CLAUDE.md  LICENSE-CODE  LICENSE-DOCS  README.md
berlin-development/: why.md
berlin-development/.fsberlin/: config.yaml
berlin-development/agents/: claude-code.yaml  lari.yaml
berlin-development/cards/adr-001-filesystem-as-substrate/: card.md
berlin-development/cards/adr-002-card-equals-folder/: card.md
berlin-development/cards/adr-003-waypoints-as-overlays/: card.md
berlin-development/cards/adr-004-agents-vs-models/: card.md
berlin-development/cards/adr-005-hitl-floors/: card.md  why.md
berlin-development/cards/adr-006-validators-vs-spymaster/: card.md
berlin-development/cards/adr-007-editor-as-peer/: card.md
berlin-development/cards/adr-008-stacks-not-absorbs/: card.md
berlin-development/cards/adr-009-two-dimensional-status/: card.md  why.md
berlin-development/cards/adr-010-relation-identity/: card.md  why.md
berlin-development/cards/adr-011-waypoint-status-model/: card.md  why.md
berlin-development/cards/adr-012-atomic-decision-clauses/: card.md  why.md
berlin-development/cards/adr-013-committed-to-clauses/: card.md
berlin-development/cards/adr-014-project-files-cold-reading/: card.md
berlin-development/cards/adr-015-context-distillation/: card.md
berlin-development/cards/adr-016-spymaster-proactive/: card.md
berlin-development/cards/adr-017-card-security-posture/: card.md
berlin-development/cards/adr-018-agent-substrate-orchestration/: card.md
berlin-development/cards/lock-four-schemas/: card.md
berlin-development/cards/p1-cli-init/: card.md
berlin-development/cards/p1-cli-query/: card.md
berlin-development/cards/p1-cli-render-waypoint/: card.md
berlin-development/cards/p1-cli-validate/: card.md
berlin-development/cards/p1-file-watcher/: card.md
berlin-development/cards/p1-frontmatter-parser/: card.md
berlin-development/cards/p1-fs-walker/: card.md
berlin-development/cards/p1-link-resolution/: card.md
berlin-development/cards/p1-sqlite-mirror/: card.md
berlin-development/cards/p1-workspace-scaffold/: card.md
berlin-development/cards/phase-0-spec-and-schema/: card.md
berlin-development/cards/phase-1-substrate-core/: card.md
berlin-development/cards/phase-10-docs-and-dogfooding/: card.md
berlin-development/cards/phase-2-git-integration/: card.md
berlin-development/cards/phase-3-validators/: card.md
berlin-development/cards/phase-4-mcp-server/: card.md
berlin-development/cards/phase-5-authority-hitl/: card.md
berlin-development/cards/phase-6-agent-runtime/: card.md
berlin-development/cards/phase-7-sentinel-spymaster/: card.md
berlin-development/cards/phase-8-docker-packaging/: card.md
berlin-development/cards/phase-9-view-renderer/: card.md
berlin-development/cards/seed-command/: card.md
berlin-development/cards/spec-fill-placeholders/: card.md
berlin-development/cards/why-md-review/: card.md
berlin-development/review/: adr-010-review.html
berlin-development/waypoints/waypoint-1-spec-locked/: waypoint.md
berlin-development/waypoints/waypoint-2-substrate-runnable/: waypoint.md
berlin-development/waypoints/waypoint-3-mvp-public/: waypoint.md
docs/: ARCHITECTURE.md  SPEC.md  why.md
docs/adr/: README.md
examples/sample-project/: README.md  why.md
examples/sample-project/.fsberlin/: config.yaml
examples/sample-project/agents/: spymaster.yaml
schema/: agent.schema.yaml  card.schema.yaml  project.schema.yaml  waypoint.schema.yaml
src-python/: README.md  pyproject.toml
src-rust/: Cargo.toml  README.md
src-rust/berlin-cli/: Cargo.toml
src-rust/berlin-cli/src/: main.rs
src-rust/berlin-core/: Cargo.toml
src-rust/berlin-core/src/: frontmatter.rs  index.rs  init.rs  lib.rs  links.rs  model.rs  query.rs  render.rs  validate.rs  walk.rs  watch.rs
src-rust/berlin-core/tests/: index_rebuild.rs  links_resolve.rs  query_index.rs  render_waypoint.rs  repo_fixtures.rs  validate_run.rs  walk_layout.rs  watch_live.rs
(+26 files in other folders)
