# Cargo.toml for the FSBerlin substrate core.
# Status: skeleton only. Phase 1 work.
#
# Members will include:
# - berlin-core    (substrate library)
# - berlin-cli     (CLI binary)
# - berlin-mcp     (MCP server binary, using rmcp)
# - berlin-validators (shared validator library)

[workspace]
members = ["berlin-core", "berlin-cli"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Lari Kemiläinen <lari@example.com>"]
repository = "https://github.com/lariKemiläinen/fsberlin"

[workspace.dependencies]
# Active (added as Phase 1 cards land):
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
notify = "6"
# Anticipated, still to be confirmed by later cards:
# tokio = { version = "1", features = ["full"] }
# rmcp = { version = "0.16", features = ["server"] }
# gix = "0.66"           # gitoxide
