[package]
name = "berlin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FSBerlin substrate core: filesystem layout, parsing, links, index."

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
